src/App.css
.simon-says-grid {
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  grid-template-rows: repeat(8, 1fr);
  height: 100vh;
  justify-items: center;
  align-items: center;
}

.simon-says-circle {
  grid-column: 3 / span 8;
  grid-row: 4 / span 5;

}

.simon-says-bulletin {
  grid-column: 3 / span 8;
  grid-row: 1;
  font-size: 35px;
  text-shadow: 2px 2px #ffffff;
  font-style: italic;
}

div {
  text-align: center;
}

.fade {
  opacity: 1;
}

.fade.hide-opacity {
  opacity: 0;
  -o-transition: opacity 3s ease-in-out;
}

.black {
  background-color: black
}
.start-button {
  grid-column: 3 / span 2;
  grid-row: 4;
}

.c-modal-cover {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10; 
  /* This must be at a higher index to the rest of your page content */
  transform: translateZ(0);
  background-color: rgba(#000, 0.15);
}

.c-modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding: 2.5em 1.5em 1.5em 1.5em;
  background-color: #FFFFFF;
  box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.1);
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;

  @media screen and (min-width: 500px) {
    left: 50%;
    top: 50%;
    height: auto;
    transform: translate(-50%, -50%);
    max-width: 30em;
    max-height: calc(100% - 1em);
  }
}

.c-modal__close {
  position: absolute;
  top: 0;
  right: 0;
  padding: .5em;
  line-height: 1;
  background: #f6f6f7;
  border: 0;
  box-shadow: 0;
  cursor: pointer;
}

.c-modal__close-icon {
  width: 25px;
  height: 25px;
  fill: transparent;
  stroke: black;
  stroke-linecap: round;
  stroke-width: 2;
}

.c-modal__body {
  padding-top: .25em;
}

/* .u-hide-visually {
  border: 0 !important;
  clip: rect(0 0 0 0) !important;
  height: 1px !important;
  margin: -1px !important;
  overflow: hidden !important;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
  white-space: nowrap !important;
} */

.button {
  padding: 15px 25px;
  font-size: 24px;
  text-align: center;
  cursor: pointer;
  outline: none;
  color: #fff;
  background-color: #4CAF50;
  border: none;
  border-radius: 15px;
  box-shadow: 0 9px #999;
}

.button:hover {background-color: #3e8e41}

.button:active {
  background-color: #3e8e41;
  box-shadow: 0 5px #666;
  transform: translateY(4px);
}

